--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,8 @@
 
 <head>
   <title>LifeZone</title>
+  <link rel="icon" href="http://example.com/favicon.png">
+
   <base href="/">
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
