--- a/src/index.html
+++ b/src/index.html
@@ -25,8 +25,7 @@
       <div class="row">
         <div class="col l6 s12">
           <h5 class="white-text">Company Bio</h5>
-          <p class="grey-text text-lighten-4">We are a team of college students working on this project like it's our full time job. Any amount would help support
-            and continue development on this project and is greatly appreciated.</p>
+          <p class="grey-text text-lighten-4">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veritatis pariatur, dignissimos nostrum placeat mollitia deleniti? Laudantium magni voluptatem esse ipsum error libero. Unde omnis sapiente doloremque sunt labore illo consectetur.</p>
 
 
         </div>
