fix cards and image

--- a/src/index.html
+++ b/src/index.html
@@ -14,19 +14,23 @@
 </head>
 
 <body>
-<!-- CSS  -->
-<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<!-- Compiled and minified CSS -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
+  <!-- CSS  -->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <!-- Compiled and minified CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
 
   <app-root></app-root>
 
+  <!-- footer -->
   <footer class="page-footer teal">
     <div class="container">
       <div class="row">
         <div class="col l6 s12">
           <h5 class="white-text">Company Bio</h5>
-          <p class="grey-text text-lighten-4">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veritatis pariatur, dignissimos nostrum placeat mollitia deleniti? Laudantium magni voluptatem esse ipsum error libero. Unde omnis sapiente doloremque sunt labore illo consectetur.</p>
+          <p class="grey-text text-lighten-4">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veritatis pariatur, dignissimos nostrum placeat mollitia
+            deleniti? Laudantium magni voluptatem esse ipsum error libero. Unde omnis sapiente doloremque sunt labore illo
+            consectetur.
+          </p>
 
 
         </div>
@@ -73,7 +77,6 @@
       </div>
     </div>
   </footer>
-
 
   <!--  Scripts-->
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
