pushing to heroku

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,15 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+  <!-- Latest compiled and minified CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
+  <!-- jQuery library -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+  <!-- Latest compiled JavaScript -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
 
 
 </head>
@@ -27,8 +36,10 @@
       <div class="row">
         <div class="col l6 s12">
           <h5 class="white-text">Company Bio</h5>
-          <p class="grey-text text-lighten-4">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veritatis pariatur, dignissimos nostrum placeat mollitia
-            deleniti? Laudantium magni voluptatem esse ipsum error libero. Unde omnis sapiente doloremque sunt labore illo
+          <p class="grey-text text-lighten-4">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veritatis
+            pariatur, dignissimos nostrum placeat mollitia
+            deleniti? Laudantium magni voluptatem esse ipsum error libero. Unde omnis sapiente doloremque sunt labore
+            illo
             consectetur.
           </p>
 
